--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "anomaly/file-field_type",
+    "name": "visiosoft/file-field_type",
     "type": "streams-addon",
     "description": "A file upload field type.",
     "keywords": [
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Anomaly\\FileFieldType\\": "src/"
+            "Visiosoft\\FileFieldType\\": "src/"
         }
     }
 }
